# secure-distributed-password-storage

./: .gitmodules  README.md  public_key.pem  python-mqtt-client.py  sdkconfig  sdkconfig.old
MQTT311Client/: MQTT311Client.h  MQTT311Client_Connack.c  MQTT311Client_Connect.c  MQTT311Client_Connect.h  MQTT311Client_Disconnect.c  MQTT311Client_Disconnect.h  MQTT311Client_Driver.c  MQTT311Client_Pingreq.c  MQTT311Client_Pingreq.h  MQTT311Client_Pingresp.c  MQTT311Client_Puback.c  MQTT311Client_Pubcomp.c  MQTT311Client_Pubcomp.h  MQTT311Client_Publish.c  MQTT311Client_Publish.h  MQTT311Client_Pubrec.c  MQTT311Client_Pubrel.c  MQTT311Client_Suback.c  MQTT311Client_Suback.h  MQTT311Client_Subscribe.c  MQTT311Client_Subscribe.h  MQTT311Client_Unsuback.c  MQTT311Client_Unsuback.h  MQTT311Client_Unsubscribe.c  MQTT311Client_Unsubscribe.h  MQTT311Client_Utilities.c  MQTT311Client_Utilities.h
RSA/: RSA.c  RSA.h  RSA_Decrypt.c  RSA_Encrypt.c  RSA_Utilities.c
app/: CMakeLists.txt  access_node.cpp  access_node.py  mqtt.cpp  mqtt.h  mqtt_subscriber.cpp  rsa.cpp  rsa.h  shamir_secret_sharing.cpp  shamir_secret_sharing.h
app/sss/: demo.c
app/sss/randombytes/: randombytes.h
doc/: architecture.md  design.md  results.md
hardware_node/: CMakeLists.txt  sdkconfig.old
hardware_node/MQTT311Client/: MQTT311Client.h  MQTT311Client_Connack.c  MQTT311Client_Connack.h  MQTT311Client_Connect.c  MQTT311Client_Connect.h  MQTT311Client_Disconnect.c  MQTT311Client_Disconnect.h  MQTT311Client_Driver.c  MQTT311Client_Driver.h  MQTT311Client_Pingreq.c  MQTT311Client_Pingreq.h  MQTT311Client_Pingresp.c  MQTT311Client_Pingresp.h  MQTT311Client_Puback.c  MQTT311Client_Puback.h  MQTT311Client_Pubcomp.c  MQTT311Client_Pubcomp.h  MQTT311Client_Publish.c  MQTT311Client_Publish.h  MQTT311Client_Pubrec.c  MQTT311Client_Pubrec.h  MQTT311Client_Pubrel.c  MQTT311Client_Pubrel.h  MQTT311Client_Suback.c  MQTT311Client_Suback.h  MQTT311Client_Subscribe.c  MQTT311Client_Subscribe.h  MQTT311Client_Unsuback.c  MQTT311Client_Unsuback.h  MQTT311Client_Unsubscribe.c  MQTT311Client_Unsubscribe.h  MQTT311Client_Utilities.c  MQTT311Client_Utilities.h
hardware_node/RSA/: RSA.c  RSA.h  RSA_Decrypt.c  RSA_Encrypt.c  RSA_Utilities.c
hardware_node/main/: CMakeLists.txt  main.c  main.h  mqtt_functions.c  mqtt_functions.h  nvs_functions.c  nvs_functions.h  ssl_functions.c  ssl_functions.h  tcp_functions.c  tcp_functions.h
main/: CMakeLists.txt  MQTT311.h  MQTT311_Connack.c  MQTT311_Connect.c  MQTT311_Driver.c  MQTT311_Driver.h  MQTT311_Publish.c  MQTT311_Suback.c  MQTT311_Subscribe.c  MQTT311_Utilities.c  MQTT311_Utilities.h  PgPKeys.h  debug_functions.c  main.c  main.h  mqtt_functions.c  python-mqtt-client.py  tcp_functions.c
main/MQTT311/: MQTT311.h  MQTT311_Connack.c  MQTT311_Connack.h  MQTT311_Connect.c  MQTT311_Connect.h  MQTT311_Disconnect.c  MQTT311_Disconnect.h  MQTT311_Driver.c  MQTT311_Driver.h  MQTT311_Pingreq.c  MQTT311_Pingreq.h  MQTT311_Pingresp.c  MQTT311_Pingresp.h  MQTT311_Puback.c  MQTT311_Puback.h  MQTT311_Pubcomp.c  MQTT311_Pubcomp.h  MQTT311_Publish.c  MQTT311_Publish.h  MQTT311_Pubrec.c  MQTT311_Pubrec.h  MQTT311_Pubrel.c  MQTT311_Pubrel.h  MQTT311_Suback.c  MQTT311_Suback.h  MQTT311_Subscribe.c  MQTT311_Subscribe.h  MQTT311_Unsuback.c  MQTT311_Unsuback.h  MQTT311_Unsubscribe.c  MQTT311_Unsubscribe.h  MQTT311_Utilities.c  MQTT311_Utilities.h
main/RSA/: RSA.c  RSA.h  RSA_Decrypt.c  RSA_Encrypt.c
software_node/: CMakeLists.txt  rsa_private_key.pem  rsa_public_key.pem
software_node/main/: main.cpp  mqtt.cpp  mqtt.h  mqtt_functions.cpp  mqtt_functions.h  rsa.cpp  rsa.h  rsa_functions.cpp  rsa_functions.h  shamir_secret_sharing.cpp  shamir_secret_sharing.h  shamir_secret_sharing_functions.cpp  shamir_secret_sharing_functions.h
software_node/sss/: sss.h
