idf_component_register(SRCS "main.c"
                            "MQTT311_Utilities.c"
                            "MQTT311_Driver.c"
                            "MQTT311_Connect.c"
                            "MQTT311_Connack.c"
                            "MQTT311_Publish.c"
                            "MQTT311_Subscribe.c"
                            "MQTT311_Suback.c"
                    INCLUDE_DIRS ".")
