idf_component_register(SRCS "main.c"
                            "MQTT311/MQTT311_Utilities.c"
                            "MQTT311/MQTT311_Driver.c"
                            "MQTT311/MQTT311_Connect.c"
                            "MQTT311/MQTT311_Connack.c"
                            "MQTT311/MQTT311_Publish.c"
                            "MQTT311/MQTT311_Puback.c"
                            "MQTT311/MQTT311_Pubrec.c"
                            "MQTT311/MQTT311_Pubrel.c"
                            "MQTT311/MQTT311_Pubcomp.c"
                            "MQTT311/MQTT311_Subscribe.c"
                            "MQTT311/MQTT311_Suback.c"
                    INCLUDE_DIRS "." "MQTT311")
