idf_component_register(SRCS "main.c"
                            "MQTT311/MQTT311_Utilities.c"
                            "MQTT311/MQTT311_Driver.c"
                            "MQTT311/MQTT311_Connect.c"
                            "MQTT311/MQTT311_Connack.c"
                            "MQTT311/MQTT311_Publish.c"
                            "MQTT311/MQTT311_Puback.c"
                            "MQTT311/MQTT311_Pubrec.c"
                            "MQTT311/MQTT311_Pubrel.c"
                            "MQTT311/MQTT311_Pubcomp.c"
                            "MQTT311/MQTT311_Subscribe.c"
                            "MQTT311/MQTT311_Suback.c"
                            "MQTT311/MQTT311_Unsubscribe.c"
                            "MQTT311/MQTT311_Unsuback.c"
                            "MQTT311/MQTT311_Pingreq.c"
                            "MQTT311/MQTT311_Pingresp.c"
                            "MQTT311/MQTT311_Disconnect.c"
                            "RSA/RSA.c"
                            "RSA/RSA_Encrypt.c"
                            "RSA/RSA_Decrypt.c"
                    INCLUDE_DIRS "." "MQTT311" "RSA")
